not working condition

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ platform = atmelavr
 framework = arduino
 board = pro16MHzatmega328
 lib_deps = fastled/FastLED@^3.4.0
+;build flag needed for languageserver to recognize Serial
+build_flags = -DUBRRH -I
